New version vro Samrtplug and watteco bundles. With reporting